--- a/app/src/main/res/layout/fragment_b.xml
+++ b/app/src/main/res/layout/fragment_b.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/fondo2"
     tools:context=".BFragment">
 
 
@@ -23,8 +24,8 @@
         android:id="@+id/buttonSum"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Sum"
-        android:textSize="44dp"
+        android:background="@drawable/button"
+        app:backgroundTint="@null"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
